--- a/scripts/data_analysis/Relative_CH4Conc_Difference_Analysis.Rmd
+++ b/scripts/data_analysis/Relative_CH4Conc_Difference_Analysis.Rmd
@@ -19,6 +19,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # pH Experiment CH4 & CO2 Concentration Analysis 
 
+Notes on script iterations & analysis process:
+I also repeated this analysis for the concentration values but normalized by incubation duration time (days). It did not change the significance of the results for timepoint 2, but the results were a little different for timepoint 1, but made less sense. So i am just going with raw concentration values because I think they're more directly interpretable. 
+Time normalized concentration analysis are now archived in old section of code (unless i really decide i don't need later and decide to delete.)
+Also moved code to OLD for combining the T1 & T2 plots into one figure because we decided we didn't want to present in 4 panel way because didn't want to encourage the comparisons between T1 and T2 concentrations within soil type. 
+
 ## Set up 
 ```{r loading libraries and setting WD}
 
@@ -63,7 +68,7 @@ data <- data %>%
     CH4_ppm_F_timenorm = CH4_ppm_FINAL/T1_to_T2_days 
     )
 
-write_csv(data,"all_data.csv")
+# write_csv(data,"all_data.csv")
 
 ```
 
@@ -108,7 +113,7 @@ summ_exp <- exp_jars %>%  # Start with the 'exp_jars' dataset and pipe it forwar
     pH_treatment = factor(pH_treatment, levels = c("5", "7", "8"))  
   )
 
-write_csv(summ_exp,"summarized_data.csv")
+# write_csv(summ_exp,"summarized_data.csv")
 
 
 ```
@@ -207,7 +212,7 @@ CH4_pvals_I <- map_df(names(CH4_models_I), function(st) {
   pval  <- anova(model)$`Pr(>F)`[1]             # Extract the p-value for pH_treatment
   data.frame(
     soil_type = st,                              # Use the soil type name from the list
-    label = paste0("p = ", signif(pval, 3))     # Format p-value
+    label = paste0("p = ", signif(pval, 2))     # Format p-value
   )
 }) %>% 
   mutate(
@@ -226,18 +231,25 @@ CH4_conc_means_I <- ggplot(summ_exp, aes(x = pH_treatment, y = CH4_ppm_INITIAL_m
                 width = 0.25, size = 0.3) +
   geom_text(
     data = CH4_letters_I, 
-    aes(x = pH_treatment, y = letter_y, label = letters),
+    aes(x = pH_treatment, 
+        y = letter_y, 
+        label = letters),
     inherit.aes = FALSE,
     fontface = "bold",
     size = 5
   ) +
-  geom_label(data = CH4_pvals_I, aes(x = 1, y = max(summ_exp$CH4_ppm_INITIAL_mean)*1.1, label = label),
-             inherit.aes = FALSE) +
+  geom_label(
+    data = CH4_pvals_I, 
+    aes(x = 1, 
+        y = 7,
+        # y = max(summ_exp$CH4_ppm_INITIAL_mean)*1.1, 
+        label = label),
+    inherit.aes = FALSE) +
   facet_wrap2(~soil_type, strip = strip_themed(
     background_x = elem_list_rect(fill = rep("gray95", 2)),
     text_x = elem_list_text(color = rep("black", 2))
   )) +
-  scale_fill_manual(values = c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
+  scale_fill_manual(values = c("darkgrey", "#66c2a5", "#8da0cb")) +
   theme_bw() +
   labs(title = bquote(CH[4]~Concentrations~Timepoint~1),
        x = "pH Treatment",
@@ -249,7 +261,8 @@ CH4_conc_means_I <- ggplot(summ_exp, aes(x = pH_treatment, y = CH4_ppm_INITIAL_m
     axis.text = element_text(size = 12),
     legend.title = element_text(size = 14),
     legend.text = element_text(size = 12)
-  )
+  ) +
+  ylim(0,7.2)
 
 CH4_conc_means_I
 
@@ -319,7 +332,7 @@ CH4_letters_F <- CH4_letters_F %>%
             by = c("soil_type", "pH_treatment")) %>%
   group_by(soil_type) %>%
   mutate(
-    letter_y = CH4_ppm_FINAL_mean + se_CH4_ppm_FINAL + 0.05*max(CH4_ppm_FINAL_mean)
+    letter_y = CH4_ppm_FINAL_mean + se_CH4_ppm_FINAL + 0.075*max(CH4_ppm_FINAL_mean)
   ) %>%
   ungroup() %>% 
   mutate(
@@ -335,7 +348,7 @@ CH4_pvals_F <- map_df(names(CH4_models_F), function(st) {
   pval  <- anova(model)$`Pr(>F)`[1]             # Extract the p-value for pH_treatment
   data.frame(
     soil_type = st,                              # Use the soil type name from the list
-    label = paste0("p = ", signif(pval, 3))     # Format p-value
+    label = paste0("p = ", signif(pval, 2))     # Format p-value
   )
 }) %>% 
   mutate(
@@ -354,18 +367,25 @@ CH4_conc_means_F <- ggplot(summ_exp, aes(x = pH_treatment, y = CH4_ppm_FINAL_mea
                 width = 0.25, size = 0.3) +
   geom_text(
     data = CH4_letters_F, 
-    aes(x = pH_treatment, y = letter_y, label = letters),
+    aes(x = pH_treatment, 
+        y = letter_y, 
+        label = letters),
     inherit.aes = FALSE,
     fontface = "bold",
     size = 5
   ) +
-  geom_label(data = CH4_pvals_F, aes(x = 3, y = max(summ_exp$CH4_ppm_FINAL_mean)*1.1, label = label),
-             inherit.aes = FALSE) +
+  geom_label(
+    data = CH4_pvals_F, 
+    aes(x = 1, 
+        y = 7,
+        # y = max(summ_exp$CH4_ppm_FINAL_mean)*1.1, 
+        label = label),
+    inherit.aes = FALSE) +
   facet_wrap2(~soil_type, strip = strip_themed(
     background_x = elem_list_rect(fill = rep("gray95", 2)),
     text_x = elem_list_text(color = rep("black", 2))
   )) +
-  scale_fill_manual(values = c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
+  scale_fill_manual(values = c("darkgrey", "#66c2a5", "#8da0cb")) +
   theme_bw() +
   labs(title = bquote(CH[4]~Concentrations~Timepoint~2),
        x = "pH Treatment",
@@ -377,7 +397,8 @@ CH4_conc_means_F <- ggplot(summ_exp, aes(x = pH_treatment, y = CH4_ppm_FINAL_mea
     axis.text = element_text(size = 12),
     legend.title = element_text(size = 14),
     legend.text = element_text(size = 12)
-  )
+  ) +
+  ylim(0,7.2)
 
 CH4_conc_means_F
 
@@ -388,6 +409,9 @@ ggsave(plot = CH4_conc_means_F, filename = "figures/10.13.25/CH4_conc_FINAL_mean
 # rm(CH4_models,CH4_letters,CH4_pvals)
 
 ```
+
+
+# OLD CODE 
 
 ## Combining timepoints 1 & 2 into one figrue 
 
@@ -518,8 +542,8 @@ ggsave(plot = CH4_conc_combined_plot,
 
 ```
 
-# Time normalized CH4 concentration analyses (without dry control)
 
+# Time normalized CH4 concentration analyses (without dry control)
 
 ## Timepoint 1 (initial)
 
@@ -904,537 +928,4 @@ ggsave(plot = CH4_conc_combined_plot,
        width = 10, height = 7)
 
 ```
-
-
-
-
-
-# OLD 
-
-## OLD T1 code 
-```{r TIMEPOINT 1 - CH4 stats}
-
-# Unamended soils 
-# p-value: 0.0008897
-CH4_un_lm <- lm(CH4_ppm_INITIAL ~ pH_treatment, data = subset(exp_jars, soil_type == "Unamended") )
-summary(CH4_un_lm)
-
-CH4_un_lm_PW <- emmeans::emmeans(CH4_un_lm, pairwise ~ pH_treatment)
-pairs(CH4_un_lm_PW, adjust = "none")
-
-# Ground rock soils 
-# p-value: 0.4149
-CH4_gr_lm <- lm(CH4_ppm_INITIAL ~ pH_treatment, data = subset(exp_jars, soil_type == "Ground Rock") )
-summary(CH4_gr_lm)
-
-CH4_gr_lm_PW <- emmeans::emmeans(CH4_gr_lm, pairwise ~ pH_treatment)
-pairs(CH4_gr_lm_PW, adjust = "none")
-
-```
-
-```{r TIMEPOINT 1 - time relative CH4 conc differences with dry control}
-
-# p-values to add to figure 
-# ANOVA results:
-## Unamended soils = p-value: 0.0008897
-## Ground rock soils = p-value: 0.4149
-CH4_mean_pvals <- data.frame(
-  soil_type = c("Unamended", "Ground Rock"),
-  x = c(4, 4),  # x-position in each panel
-  y = c( max(summary_exp$mean_CH4_ppm_INITIAL*1.25,
-         max(summary_exp$mean_CH4_ppm_INITIAL)*1.25) ),  # y-position
-  label = c("p < 0.001", "p = 0.41")
-) %>% 
-  mutate(soil_type = factor(soil_type, levels = c("Unamended","Ground Rock") ) )
-
-
-# letters for posthoc pairwise results 
-CH4_mean_ltrs <- data.frame(
-  soil_type   = rep(c("Unamended", "Ground Rock"), each = 4),
-  pH_treatment = rep(c("Dry control", "5", "7", "8"), times = 2),
-  letters     = c("a", "b", "b", "b",   # panel 1 letters
-                  "a", "a", "a", "a"), # panel 2 letters
-  mean_CH4_ppm_INITIAL   = summary_exp$mean_CH4_ppm_INITIAL,    # to align letters above bars
-  se_CH4_ppm_INITIAL = summary_exp$se_CH4_ppm_INITIAL) %>% 
-  mutate(letter_y = case_when(
-    pH_treatment %in% c("7", "8") ~ mean_CH4_ppm_INITIAL - se_CH4_ppm_INITIAL - 0.2*max(mean_CH4_ppm_INITIAL), # BELOW error bar
-    TRUE ~ mean_CH4_ppm_INITIAL + se_CH4_ppm_INITIAL + 0.2*max(mean_CH4_ppm_INITIAL)                            # ABOVE error bar
-  )) %>% 
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("Dry control","5","7","8"))
-  )
-
-# CH4 mean figure 
-CH4_mean <- ggplot(summary_exp, aes(x=pH_treatment,y=mean_CH4_ppm_INITIAL,fill=pH_treatment) ) +
-  geom_col(position = "dodge", color = "black") +
-   geom_errorbar(data = summary_exp, aes(x=pH_treatment, ymin=mean_CH4_ppm_INITIAL-se_CH4_ppm_INITIAL, ymax=mean_CH4_ppm_INITIAL+se_CH4_ppm_INITIAL), width=0.25, size=.3) +
-  geom_text(data = CH4_mean_ltrs,
-            aes(x = pH_treatment, 
-                y = letter_y, # bump above error bars
-                label = letters),
-            inherit.aes = FALSE) +
-    geom_label(data = CH4_mean_pvals,
-            aes(x = x, y = y, label = label),
-            inherit.aes = FALSE) +
-  facet_wrap2(~soil_type,
-             strip = strip_themed(
-  background_x = elem_list_rect(fill = rep("gray95", 2)),
-  text_x = elem_list_text(color = rep("black", 2)) 
-  )) +
-  theme_bw () +
-  # scale_color_brewer(palette = "Dark2") +
-  labs(title = (bquote(Relative~CH[4]~Concentrations~Timepoint1) ),
-       x = "pH Treatment",
-       y = "CH4 ppm normalized by incubation time (days)") +
-  scale_fill_manual(values=c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
-  scale_color_manual(values=c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
-  theme(
-  plot.title = element_text(size = 20),        # Title text size
-  axis.title.x = element_text(size = 14),      # X-axis title text size
-  axis.title.y = element_text(size = 14),      # Y-axis title text size
-  axis.text.x = element_text(size = 12),       # X-axis text size
-  axis.text.y = element_text(size = 12),       # Y-axis text size
-  legend.title = element_text(size = 14),      # Legend title text size
-  legend.text = element_text(size = 12)        # Legend text size
-) +
-  labs(fill = "Soil pH Treatment") 
-
-CH4_mean
-
-ggsave(plot = CH4_mean, filename = "../figures/fluxes/10.06.25/CH4_conc_means_NOTNOMRALIZED_T1.png", width = 8.5, height = 5)
-
-```
-
-## OLD T2 code 
-
-```{r TIMEPOINT 2 - time relative CH4 conc differences with dry control}
-
-# p-values to add to figure 
-# ANOVA results:
-## Unamended soils = p-value: 0.00542
-## Ground rock soils = p-value: 0.01311
-CH4_mean_pvals <- data.frame(
-  soil_type = c("Unamended", "Ground Rock"),
-  x = c(4, 4),  # x-position in each panel
-  y = c( max(summary_exp$mean_CH4_ppm_FINAL*1.25,
-         max(summary_exp$mean_CH4_ppm_FINAL)*1.25) ),  # y-position
-  label = c("p = 0.005", "p = 0.01")
-) %>% 
-  mutate(soil_type = factor(soil_type, levels = c("Unamended","Ground Rock") ) )
-
-
-# letters for posthoc pairwise results 
-CH4_mean_ltrs <- data.frame(
-  soil_type   = rep(c("Unamended", "Ground Rock"), each = 4),
-  pH_treatment = rep(c("Dry control", "5", "7", "8"), times = 2),
-  letters     = c("a", "a", "b", "b",   # panel 1 letters
-                  "a", "a", "b", "ab"), # panel 2 letters
-  mean_CH4_ppm_FINAL   = summary_exp$mean_CH4_ppm_FINAL,    # to align letters above bars
-  se_CH4_ppm_FINAL = summary_exp$se_CH4_ppm_FINAL) %>% 
-  mutate(letter_y = case_when(
-    pH_treatment %in% c("7", "8") ~ mean_CH4_ppm_FINAL - se_CH4_ppm_FINAL - 0.2*max(mean_CH4_ppm_FINAL), # BELOW error bar
-    TRUE ~ mean_CH4_ppm_FINAL + se_CH4_ppm_FINAL + 0.2*max(mean_CH4_ppm_FINAL)                            # ABOVE error bar
-  )) %>% 
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("Dry control","5","7","8"))
-  )
-
-# CH4 mean figure 
-CH4_mean <- ggplot(summary_exp, aes(x=pH_treatment,y=mean_CH4_ppm_FINAL,fill=pH_treatment) ) +
-  geom_col(position = "dodge", color = "black") +
-   geom_errorbar(data = summary_exp, aes(x=pH_treatment, ymin=mean_CH4_ppm_FINAL-se_CH4_ppm_FINAL, ymax=mean_CH4_ppm_FINAL+se_CH4_ppm_FINAL), width=0.25, size=.3) +
-  geom_text(data = CH4_mean_ltrs,
-            aes(x = pH_treatment, 
-                y = letter_y, # bump above error bars
-                label = letters),
-            inherit.aes = FALSE) +
-    geom_label(data = CH4_mean_pvals,
-            aes(x = x, y = y, label = label),
-            inherit.aes = FALSE) +
-  facet_wrap2(~soil_type,
-             strip = strip_themed(
-  background_x = elem_list_rect(fill = rep("gray95", 2)),
-  text_x = elem_list_text(color = rep("black", 2)) 
-  )) +
-  theme_bw () +
-  # scale_color_brewer(palette = "Dark2") +
-  labs(title = (bquote(Relative~CH[4]~Concentrations~TimepoinT2) ),
-       x = "pH Treatment",
-       y = "CH4 ppm normalized by incubation time (days)") +
-  scale_fill_manual(values=c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
-  scale_color_manual(values=c("darkgrey", "#66c2a5", "#fc8d62", "#8da0cb")) +
-  theme(
-  plot.title = element_text(size = 20),        # Title text size
-  axis.title.x = element_text(size = 14),      # X-axis title text size
-  axis.title.y = element_text(size = 14),      # Y-axis title text size
-  axis.text.x = element_text(size = 12),       # X-axis text size
-  axis.text.y = element_text(size = 12),       # Y-axis text size
-  legend.title = element_text(size = 14),      # Legend title text size
-  legend.text = element_text(size = 12)        # Legend text size
-) +
-  labs(fill = "Soil pH Treatment") 
-
-CH4_mean
-
-ggsave(plot = CH4_mean, filename = "../figures/fluxes/10.06.25/CH4_conc_meansT2.png", width = 8.5, height = 5)
-
-```
-
-```{r TIMEPOINT 2 - CH4 stats}
-
-# Unamended soils 
-# p-value: 0.00542
-CH4_un_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars, soil_type == "Unamended") )
-summary(CH4_un_lm)
-
-CH4_un_lm_PW <- emmeans::emmeans(CH4_un_lm, pairwise ~ pH_treatment)
-pairs(CH4_un_lm_PW, adjust = "none")
-
-# Ground rock soils 
-# p-value: 0.01311
-CH4_gr_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars, soil_type == "Ground Rock") )
-summary(CH4_gr_lm)
-
-CH4_gr_lm_PW <- emmeans::emmeans(CH4_gr_lm, pairwise ~ pH_treatment)
-pairs(CH4_gr_lm_PW, adjust = "none")
-
-```
-
-## WITHOUT DRY CONTROL 
-
-```{r summarizing data}
-
-# Selecting only the experimental jars to include in the figure 
-exp_jars2 <- data %>% 
-  filter(jar_type == "Exp") %>% 
-  filter(pH_treatment != "Dry control")
-
-# Making summarized dataset for mean figures 
-summary_exp2 <- exp_jars2 %>% 
-  group_by(soil_type,pH_treatment) %>% 
-  summarize(mean_CH4_ppm_INITIAL = mean(CH4_ppm_INITIAL),
-            sd_CH4_ppm_INITIAL = sd(CH4_ppm_INITIAL), 
-            n_CH4_ppm_INITIAL = length(CH4_ppm_INITIAL), 
-            se_CH4_ppm_INITIAL = sd_CH4_ppm_INITIAL/sqrt(n_CH4_ppm_INITIAL),
-            mean_CH4_ppm_FINAL = mean(CH4_ppm_FINAL),
-            sd_CH4_ppm_FINAL = sd(CH4_ppm_FINAL),
-            n_CH4_ppm_FINAL = length(CH4_ppm_FINAL),
-            se_CH4_ppm_FINAL = sd_CH4_ppm_FINAL/sqrt(n_CH4_ppm_FINAL) ) %>% 
-  ungroup() %>%
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("Dry control","5","7","8"))
-  )
-
-```
-
-```{r TIMEPOINT 1 - time relative CH4 conc differences with dry control}
-
-# p-values to add to figure 
-# ANOVA results:
-## Unamended soils = p-value: 0.1793
-## Ground rock soils = p-value: 0.1164
-CH4_mean_pvals <- data.frame(
-  soil_type = c("Unamended", "Ground Rock"),
-  x = c(2, 2),  # x-position in each panel
-  y = c( max(summary_exp2$mean_CH4_ppm_INITIAL*1.25,
-         max(summary_exp2$mean_CH4_ppm_INITIAL)*1.25) ),  # y-position
-  label = c("p = 0.18", "p = 0.12")
-) %>% 
-  mutate(soil_type = factor(soil_type, levels = c("Unamended","Ground Rock") ) )
-
-# letters for posthoc pairwise results 
-CH4_mean_ltrs <- data.frame(
-  soil_type   = rep(c("Unamended", "Ground Rock"), each = 3),
-  pH_treatment = rep(c("5", "7", "8"), times = 2),
-  letters     = c("a", "a", "a",   # panel 1 letters
-                  "a", "a", "a"), # panel 2 letters
-  mean_CH4_ppm_INITIAL   = summary_exp2$mean_CH4_ppm_INITIAL,    # to align letters above bars
-  se_CH4_ppm_INITIAL = summary_exp2$se_CH4_ppm_INITIAL) %>% 
-  mutate(letter_y = case_when(
-    pH_treatment %in% c("7", "8") ~ mean_CH4_ppm_INITIAL - se_CH4_ppm_INITIAL - 0.2*max(mean_CH4_ppm_INITIAL), # BELOW error bar
-    TRUE ~ mean_CH4_ppm_INITIAL + se_CH4_ppm_INITIAL + 0.2*max(mean_CH4_ppm_INITIAL)                            # ABOVE error bar
-  )) %>% 
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("5","7","8"))
-  )
-
-# CH4 mean figure 
-CH4_mean <- ggplot(summary_exp2, aes(x=pH_treatment,y=mean_CH4_ppm_INITIAL,fill=pH_treatment) ) +
-  geom_col(position = "dodge", color = "black") +
-   geom_errorbar(data = summary_exp2, aes(x=pH_treatment, ymin=mean_CH4_ppm_INITIAL-se_CH4_ppm_INITIAL, ymax=mean_CH4_ppm_INITIAL+se_CH4_ppm_INITIAL), width=0.25, size=.3) +
-  geom_text(data = CH4_mean_ltrs,
-            aes(x = pH_treatment, 
-                y = letter_y, # bump above error bars
-                label = letters),
-            inherit.aes = FALSE) +
-    geom_label(data = CH4_mean_pvals,
-            aes(x = x, y = y, label = label),
-            inherit.aes = FALSE) +
-  facet_wrap2(~soil_type,
-             strip = strip_themed(
-  background_x = elem_list_rect(fill = rep("gray95", 2)),
-  text_x = elem_list_text(color = rep("black", 2)) 
-  )) +
-  theme_bw () +
-  # scale_color_brewer(palette = "Dark2") +
-  labs(title = (bquote(CH[4]~ppm~normalized~by~incubation~duration~days~Timepoint1) ),
-       x = "pH Treatment",
-       y = "CH4 ppm normalized by incubation time (days)") +
-  scale_fill_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  scale_color_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  theme(
-  plot.title = element_text(size = 20),        # Title text size
-  axis.title.x = element_text(size = 14),      # X-axis title text size
-  axis.title.y = element_text(size = 14),      # Y-axis title text size
-  axis.text.x = element_text(size = 12),       # X-axis text size
-  axis.text.y = element_text(size = 12),       # Y-axis text size
-  legend.title = element_text(size = 14),      # Legend title text size
-  legend.text = element_text(size = 12)        # Legend text size
-) +
-  labs(fill = "Soil pH Treatment") 
-
-CH4_mean
-
-ggsave(plot = CH4_mean, filename = "../figures/fluxes/10.06.25/CH4_conc_means_noCONTROL.png", width = 8.5, height = 5)
-
-
-```
-
-```{r TIMEPOINT 1 - CH4 stats}
-
-# Unamended soils 
-# p-value: 0.1793
-CH4_un_lm <- lm(CH4_ppm_INITIAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Unamended") )
-summary(CH4_un_lm)
-
-CH4_un_lm_PW <- emmeans::emmeans(CH4_un_lm, pairwise ~ pH_treatment)
-pairs(CH4_un_lm_PW, adjust = "none")
-
-# Ground rock soils 
-# p-value: 0.1164
-CH4_gr_lm <- lm(CH4_ppm_INITIAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Ground Rock") )
-summary(CH4_gr_lm)
-
-CH4_gr_lm_PW <- emmeans::emmeans(CH4_gr_lm, pairwise ~ pH_treatment)
-pairs(CH4_gr_lm_PW, adjust = "none")
-
-```
-
-```{r TIMEPOINT 2 - time relative CH4 conc differences with dry control}
-
-# p-values to add to figure 
-# ANOVA results:
-## Unamended soils = p-value: 0.1005
-## Ground rock soils = p-value: 0.04685
-CH4_mean_pvals <- data.frame(
-  soil_type = c("Unamended", "Ground Rock"),
-  x = c(2, 2),  # x-position in each panel
-  y = c( max(summary_exp2$mean_CH4_ppm_FINAL*1.25,
-         max(summary_exp2$mean_CH4_ppm_FINAL)*1.25) ),  # y-position
-  label = c("p = 0.10", "p = 0.046")
-) %>% 
-  mutate(soil_type = factor(soil_type, levels = c("Unamended","Ground Rock") ) )
-
-# letters for posthoc pairwise results 
-CH4_mean_ltrs <- data.frame(
-  soil_type   = rep(c("Unamended", "Ground Rock"), each = 3),
-  pH_treatment = rep(c("5", "7", "8"), times = 2),
-  letters     = c("a", "a", "a",   # panel 1 letters
-                  "a", "a", "a"), # panel 2 letters
-  mean_CH4_ppm_FINAL   = summary_exp2$mean_CH4_ppm_FINAL,    # to align letters above bars
-  se_CH4_ppm_FINAL = summary_exp2$se_CH4_ppm_FINAL) %>% 
-  mutate(letter_y = case_when(
-    pH_treatment %in% c("7", "8") ~ mean_CH4_ppm_FINAL - se_CH4_ppm_FINAL - 0.2*max(mean_CH4_ppm_FINAL), # BELOW error bar
-    TRUE ~ mean_CH4_ppm_FINAL + se_CH4_ppm_FINAL + 0.2*max(mean_CH4_ppm_FINAL)                            # ABOVE error bar
-  )) %>% 
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("5","7","8"))
-  )
-
-# CH4 mean figure 
-CH4_mean <- ggplot(summary_exp2, aes(x=pH_treatment,y=mean_CH4_ppm_FINAL,fill=pH_treatment) ) +
-  geom_col(position = "dodge", color = "black") +
-   geom_errorbar(data = summary_exp2, aes(x=pH_treatment, ymin=mean_CH4_ppm_FINAL-se_CH4_ppm_FINAL, ymax=mean_CH4_ppm_FINAL+se_CH4_ppm_FINAL), width=0.25, size=.3) +
-  geom_text(data = CH4_mean_ltrs,
-            aes(x = pH_treatment, 
-                y = letter_y, # bump above error bars
-                label = letters),
-            inherit.aes = FALSE) +
-    geom_label(data = CH4_mean_pvals,
-            aes(x = x, y = y, label = label),
-            inherit.aes = FALSE) +
-  facet_wrap2(~soil_type,
-             strip = strip_themed(
-  background_x = elem_list_rect(fill = rep("gray95", 2)),
-  text_x = elem_list_text(color = rep("black", 2)) 
-  )) +
-  theme_bw () +
-  # scale_color_brewer(palette = "Dark2") +
-  labs(title = (bquote(CH[4]~ppm~normalized~by~incubation~duration~days~Timepoint2) ),
-       x = "pH Treatment",
-       y = "CH4 ppm normalized by incubation time (days)") +
-  scale_fill_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  scale_color_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  theme(
-  plot.title = element_text(size = 20),        # Title text size
-  axis.title.x = element_text(size = 14),      # X-axis title text size
-  axis.title.y = element_text(size = 14),      # Y-axis title text size
-  axis.text.x = element_text(size = 12),       # X-axis text size
-  axis.text.y = element_text(size = 12),       # Y-axis text size
-  legend.title = element_text(size = 14),      # Legend title text size
-  legend.text = element_text(size = 12)        # Legend text size
-) +
-  labs(fill = "Soil pH Treatment") 
-
-CH4_mean
-
-ggsave(plot = CH4_mean, filename = "../figures/fluxes/10.06.25/CH4_conc_means_T2_noCONTROL.png", width = 8.5, height = 5)
-
-
-```
-
-```{r TIMEPOINT 2 - CH4 stats}
-
-# Unamended soils 
-# p-value: 0.1005
-CH4_un_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Unamended") )
-summary(CH4_un_lm)
-
-CH4_un_lm_PW <- emmeans::emmeans(CH4_un_lm, pairwise ~ pH_treatment)
-pairs(CH4_un_lm_PW, adjust = "none")
-
-# Ground rock soils 
-# p-value: 0.04685
-CH4_gr_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Ground Rock") )
-summary(CH4_gr_lm)
-
-CH4_gr_lm_PW <- emmeans::emmeans(CH4_gr_lm, pairwise ~ pH_treatment)
-pairs(CH4_gr_lm_PW, adjust = "none")
-
-```
-
-# just concentration 
-```{r TIMEPOINT 2 - time relative CH4 conc differences with dry control}
-
-
-# Selecting only the experimental jars to include in the figure 
-exp_jars2 <- data %>% 
-  filter(jar_type == "Exp") %>% 
-  filter(pH_treatment != "Dry control")
-
-# Making summarized dataset for mean figures 
-summary_exp2 <- exp_jars2 %>% 
-  group_by(soil_type,pH_treatment) %>% 
-  summarize(mean_CH4_ppm_INITIAL = mean(CH4_ppm_INITIAL),
-            sd_CH4_ppm_INITIAL = sd(CH4_ppm_INITIAL), 
-            n_CH4_ppm_INITIAL = length(CH4_ppm_INITIAL), 
-            se_CH4_ppm_INITIAL = sd_CH4_ppm_INITIAL/sqrt(n_CH4_ppm_INITIAL),
-            mean_CH4_ppm_FINAL = mean(CH4_ppm_FINAL),
-            sd_CH4_ppm_FINAL = sd(CH4_ppm_FINAL),
-            n_CH4_ppm_FINAL = length(CH4_ppm_FINAL),
-            se_CH4_ppm_FINAL = sd_CH4_ppm_FINAL/sqrt(n_CH4_ppm_FINAL) ) %>% 
-  ungroup() %>%
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("5","7","8"))
-  )
-
-
-# p-values to add to figure 
-# ANOVA results:
-## Unamended soils = p-value: 0.1005
-## Ground rock soils = p-value: 0.04685
-CH4_mean_pvals <- data.frame(
-  soil_type = c("Unamended", "Ground Rock"),
-  x = c(2, 2),  # x-position in each panel
-  y = c( max(summary_exp2$mean_CH4_ppm_FINAL*1.25,
-         max(summary_exp2$mean_CH4_ppm_FINAL)*1.25) ),  # y-position
-  label = c("p = 0.10", "p = 0.046")
-) %>% 
-  mutate(soil_type = factor(soil_type, levels = c("Unamended","Ground Rock") ) )
-
-# letters for posthoc pairwise results 
-CH4_mean_ltrs <- data.frame(
-  soil_type   = rep(c("Unamended", "Ground Rock"), each = 3),
-  pH_treatment = rep(c("5", "7", "8"), times = 2),
-  letters     = c("a", "a", "a",   # panel 1 letters
-                  "a", "a", "a"), # panel 2 letters
-  mean_CH4_ppm_FINAL   = summary_exp2$mean_CH4_ppm_FINAL,    # to align letters above bars
-  se_CH4_ppm_FINAL = summary_exp2$se_CH4_ppm_FINAL) %>% 
-  mutate(letter_y = case_when(
-    pH_treatment %in% c("7", "8") ~ mean_CH4_ppm_FINAL - se_CH4_ppm_FINAL - 0.2*max(mean_CH4_ppm_FINAL), # BELOW error bar
-    TRUE ~ mean_CH4_ppm_FINAL + se_CH4_ppm_FINAL + 0.2*max(mean_CH4_ppm_FINAL)                            # ABOVE error bar
-  )) %>% 
-  mutate(
-    soil_type = factor(soil_type, levels = c("Unamended","Ground Rock")),
-    pH_treatment = factor(pH_treatment, levels = c("5","7","8"))
-  )
-
-# CH4 mean figure 
-CH4_mean <- ggplot(summary_exp2, aes(x=pH_treatment,y=mean_CH4_ppm_FINAL,fill=pH_treatment) ) +
-  geom_col(position = "dodge", color = "black") +
-   geom_errorbar(data = summary_exp2, aes(x=pH_treatment, ymin=mean_CH4_ppm_FINAL-se_CH4_ppm_FINAL, ymax=mean_CH4_ppm_FINAL+se_CH4_ppm_FINAL), width=0.25, size=.3) +
-  geom_text(data = CH4_mean_ltrs,
-            aes(x = pH_treatment, 
-                y = letter_y, # bump above error bars
-                label = letters),
-            inherit.aes = FALSE) +
-    geom_label(data = CH4_mean_pvals,
-            aes(x = x, y = y, label = label),
-            inherit.aes = FALSE) +
-  facet_wrap2(~soil_type,
-             strip = strip_themed(
-  background_x = elem_list_rect(fill = rep("gray95", 2)),
-  text_x = elem_list_text(color = rep("black", 2)) 
-  )) +
-  theme_bw () +
-  # scale_color_brewer(palette = "Dark2") +
-  labs(title = (bquote(CH[4]~ppm~normalized~by~incubation~duration~days~Timepoint2) ),
-       x = "pH Treatment",
-       y = "CH4 ppm normalized by incubation time (days)") +
-  scale_fill_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  scale_color_manual(values=c("#66c2a5", "#fc8d62", "#8da0cb")) +
-  theme(
-  plot.title = element_text(size = 20),        # Title text size
-  axis.title.x = element_text(size = 14),      # X-axis title text size
-  axis.title.y = element_text(size = 14),      # Y-axis title text size
-  axis.text.x = element_text(size = 12),       # X-axis text size
-  axis.text.y = element_text(size = 12),       # Y-axis text size
-  legend.title = element_text(size = 14),      # Legend title text size
-  legend.text = element_text(size = 12)        # Legend text size
-) +
-  labs(fill = "Soil pH Treatment") 
-
-CH4_mean
-
-ggsave(plot = CH4_mean, filename = "../figures/fluxes/10.06.25/CH4_conc_means_T2_noCONTROL.png", width = 8.5, height = 5)
-
-
-```
-
-```{r TIMEPOINT 2 - CH4 stats}
-
-# Unamended soils 
-# p-value: 0.1005
-CH4_un_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Unamended") )
-summary(CH4_un_lm)
-
-CH4_un_lm_PW <- emmeans::emmeans(CH4_un_lm, pairwise ~ pH_treatment)
-pairs(CH4_un_lm_PW, adjust = "none")
-
-# Ground rock soils 
-# p-value: 0.04685
-CH4_gr_lm <- lm(CH4_ppm_FINAL ~ pH_treatment, data = subset(exp_jars2, soil_type == "Ground Rock") )
-summary(CH4_gr_lm)
-
-CH4_gr_lm_PW <- emmeans::emmeans(CH4_gr_lm, pairwise ~ pH_treatment)
-pairs(CH4_gr_lm_PW, adjust = "none")
-
-```
-
 
